Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-06-20 (SVN):
    * Minor updates to the TODO and README.music documents.
    * Moved Host_Version_f from host_cmd.c to host.c.
    * model.c, gl_model.c: Cleanup for local/global mins/maxs variables.

2011-06-19 (SVN):
    * Bumped beta date to 2011-06-19. Updated the 1.5.0 release notes.
    * host_cmd.c (LoadGamestate): Before calling ED_ParseEdict(), default
      to active edict because ED_ParseEdict() will set it to free if it
      really is. Fixes a game load bug where a freed entity slot within
      the map's original num_edicts range is reused for a dropped a soul
      sphere and the game then re-saved: see bug entry #3287803.  Noticed
      by Thomas.  No need to clear the edict from within LoadGamestate(),
      either, because ED_ParseEdict() will already do it for us, since
      SaveGamestate() doesn't write entnum 0.

2011-06-19 (SVN):
    * removed my old ugly hack of reducing teleport push speed to 225 in
      order to overcome the problem of reaching the Cathedral's balcony
      and the holy cross (triggers.hc::teleport_touch), and added Thomas'
      modified entities file for the Cathedral map instead. The modified
      ent file moves the teleport destination to the left side of the
      balcony as the solution.

2011-06-19 (SVN):
    * subs.hc (SUB_Remove): Added a note in the portals version that it
      calling stopSound() is cutting off many sounds, for instance when
      harvesting soul spheres. Only the portals version of SUB_Remove()
      calls stopSound(self,0).
    * updated gamecode README file.

2011-06-19 (SVN):
    * medusa.hc (medusa_decap_init, medusa_die): Make sure that the gaze
      attack sound doesn't persist when medusa is dead.

2011-06-19 (SVN):
    * moved the gamecode/devel directory out of hc.
    * reorganized the reference sources directory.

2011-06-18 (SVN):