@@ -4,6 +4,8 @@ Development Progress	:
 ---------------------------
 
 2011-06-20 (SVN):
+    * scripts/cdrip_hexen2.sh, cdrip_missionpack.sh: Minor tidy up.
+    * rpm/hexen2.spec: Install the cd-rip scripts.
     * Minor updates to the TODO and README.music documents.
     * Moved Host_Version_f from host_cmd.c to host.c.
     * model.c, gl_model.c: Cleanup for local/global mins/maxs variables.
